bdr.BDR.scala.error
Erreur de compilation :
BDR:10: error: too many arguments for method droite: ()Unit
    droite(2)
          ^